Game is semi-complete. With score boards and complete game action

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         margin: 0px;
         background: black;
       }
+      @font-face {
+        font-family: 'OpenDyslexic';
+        src: url('assets/fonts/OpenDyslexicMono-Regular.otf')  format('opentype'),
+      }
     </style>
   </head>
   <body>
