Added boot, menu and main states. Changed layout.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </style>
   </head>
   <body>
+    <script src="js/boot.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/game_birdcolorpop.js"></script>
     <script src="js/main.js"></script>
-    <!-- <script src="js/test.js"></script> -->
   </body>
 </html>
