--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <script src="js/boot.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/screen_rewards.js"></script>
     <script src="js/game_birdcolorpop.js"></script>
     <script src="js/main.js"></script>
   </body>
