--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/menu.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/screen_rewards.js"></script>
+    <script src="js/screen_feedback.js"></script>
     <script src="js/game_birdcolorpop.js"></script>
     <script src="js/main.js"></script>
   </body>
